<resources>
    <string name="app_name">GreenHouseApp</string>
    <string name="get_started_string">Get Started</string>
    <string name="property_srting">The property of Andrei Dornea</string>
    <string name="humidity_text">Humidity</string>
    <string name="temperature_text">Temperature</string>
    <string name="light_text">Light</string>
    <string name="soil_text">Soil</string>
    <string name="plant_page_toolbar_string">My plants</string>
    <string name="plant_family_string">Family</string>
    <string name="plant_species_string">Species</string>
    <string name="humidity_label_string">Humidity</string>
    <string name="temperature_label_string">Temperature</string>
</resources>