<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="Back"
        app:navigationIcon="@drawable/back_arrow_icon">

        <TextView
            android:id="@+id/toolbar_text"
            style="@style/Toolbar.Text.Style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/plant_page_toolbar_string" />
    </com.google.android.material.appbar.MaterialToolbar>

    <View
        android:id="@+id/bottom_statistics_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_top_text_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/text_field_name"
            style="@style/Plant.Status.Text.Big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Planty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_field_birthdate"
            style="@style/Plant.Status.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="26 Weeks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_name" />

        <TextView
            android:id="@+id/text_field_species"
            style="@style/Plant.Status.Text.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Aloe Vera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_birthdate" />

        <TextView
            android:id="@+id/text_field_sub_species"
            style="@style/Plant.Status.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_species_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_species" />

        <TextView
            android:id="@+id/text_field_family"
            style="@style/Plant.Status.Text.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Asphodelaceae"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_sub_species" />

        <TextView
            android:id="@+id/text_field_sub_family"
            style="@style/Plant.Status.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_family_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_family" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/plant_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-110dp"
        android:background="@drawable/plant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="120dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom_statistics_area"
        app:layout_constraintEnd_toEndOf="@id/bottom_statistics_area"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="@id/bottom_statistics_area"
        app:layout_constraintTop_toTopOf="@id/bottom_statistics_area"
        app:layout_constraintWidth_percent="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/humidity_constraint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/humidity_indicator"
                style="@style/Widget.Material3.CircularProgressIndicator.Style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/humidity_percent"
                style="@style/CircularProgressIndicator.Text.Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/CircularProgressIndicator.Text.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label_string"
            app:layout_constraintEnd_toEndOf="@id/humidity_constraint"
            app:layout_constraintStart_toStartOf="@id/humidity_constraint"
            app:layout_constraintTop_toBottomOf="@id/humidity_constraint" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/temperature_constraint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toEndOf="@+id/humidity_constraint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/temperature_indicator"
                style="@style/Widget.Material3.CircularProgressIndicator.Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progress="35"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/temperature_percent"
                style="@style/CircularProgressIndicator.Text.Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="35"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/CircularProgressIndicator.Text.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_label_string"
            app:layout_constraintEnd_toEndOf="@id/temperature_constraint"
            app:layout_constraintStart_toStartOf="@id/temperature_constraint"
            app:layout_constraintTop_toBottomOf="@id/temperature_constraint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>